# simple-cv

./: .gitignore  CMakeLists.txt  README.md
cmake/: CVUtils.cmake
include/: common.h  cv_api.h  cvtColor.h  norm.h  paramter.h  resize.h  transform.h  utils.h  warpAffine.h
include/cv/: core.h
samples/: CMakeLists.txt  cv.cc  sample_resize.cc
scripts/: build_linux_x86.sh
src/: config.h.in  cv.cc  cvtColor.cc  norm.cc  resize.cc  transform.cc  warpAffine.cc
src/cv/: affine.cc  c_api.h  color.cc  core.h  normalize.cc  resize.cc
tests/: CMakeLists.txt  simple_cv_gtest.cc  test_cv.cc
tests/data/: image2bin.py
tests/utils/: stb_image.h  stb_image_write.h  test_util.h
