PROJECT(simple.cv_test)

SET(TARGET_NAME simple_cv_test)

FILE(GLOB_RECURSE util_sources 
    ${CMAKE_CURRENT_SOURCE_DIR}/utils/*.cc 
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
LIST(APPEND test_sources ${util_sources})

ADD_EXECUTABLE(${TARGET_NAME}
    ${test_sources}
)

TARGET_INCLUDE_DIRECTORIES(${TARGET_NAME} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/utils/
    ${GTEST_INCLUDE_DIR}
    ${CMAKE_INSTALL_PREFIX}/simple.cv/include
)

TARGET_LINK_LIBRARIES(${TARGET_NAME}
    ${SIMPLE_BASE_LIBS}
    ${GTEST_LIBRARIES}
    ${CMAKE_DL_LIBS}
)

# INSTALL(DIRECTORY data DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
INSTALL(TARGETS ${TARGET_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/)
